feature: create styles and boxes for login

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<body class="body">
+  <div class="login-box">
+    <h1>Login</h1>
+    <input class="input"
+    type="email"
+    placeholder="Enter your email">
+    <input class="input"
+    type="password"
+    placeholder="Enter your password">
+    <button
+    class="submit-button"
+    type="submit">Go!</button>
+  </div>
+</body>
