feature: registration OK

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -39,7 +39,7 @@
     required="true"
     type="password"
     placeholder="Enter your password"
-    [(ngModel)]="user.pwd"
+    [(ngModel)]="user.password"
     [ngClass]="{
       'invalid':!validPwd
     }">
