--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -59,7 +59,7 @@
     name="password1"
     required="true"
     placeholder="Enter a password"
-    [(ngModel)]="user.pwd"
+    [(ngModel)]="user.password"
     [ngClass]="{
       'invalid':!validPwd
     }">
