--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -88,6 +88,7 @@
     type="submit"
     [disabled] = "registerForm.invalid"
     (submit)="user"
+    [hidden]="sendigRegister"
     [ngClass]="{
       'invalid':registerForm.invalid
     }"
