--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 .body {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   background-color: #181c2a;
   font-family: 'Inconsolata', monospace;
+  margin-top: 0;
+  padding-top: 0;
 }/* You can add global styles to this file, and also import other style files */
