feature: creating UI for dashboard

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -19,6 +19,23 @@
   </nav>
 </aside>
 
-<div class="main-content" [class.active]="isSidebarActive">
-  <!-- Tu contenido aquí -->
+<div class="main-content" [class.active]="!isSidebarActive">
+  <div class="grid-container">
+    <div class="grid-item">
+      <label for="progressBar">Progreso de jineteada</label>
+      <progress id="progressBar" value="70" max="100"></progress>
+      <span>{{ progressBarValue }}%</span>
+    </div>
+    <div class="grid-item">Puntos Colombia generados:
+      <h1>350000</h1>
+    </div>
+    <div class="grid-item">Contenido 3</div>
+    <div class="grid-item">
+      <canvas baseChart [data]="pieChartData" [type]="pieChartType">
+      </canvas>
+    </div>
+    <div class="grid-item full-width">
+    </div>
+  </div>
 </div>
+
