--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -44,10 +44,76 @@
 }
 
 .main-content {
+  padding: 2rem;
   transition: margin-left 0.3s;
-  padding-left: 50px; // Asegúrate de tener suficiente espacio para el botón cuando el sidebar esté cerrado
+  margin-left: 250px; // Tamaño del sidebar abierto
 
   &.active {
-    margin-left: 250px; // Ajusta este valor al ancho del sidebar
+    margin-left: 0; // Tamaño del sidebar cerrado
+  }
+
+  .grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center; // Espacio entre los elementos de la cuadrícula
+
+    .grid-item {
+      flex: 1 1 45%;
+      min-width: 300px;
+      border-radius: 8px;
+      border: 2px;
+      border-color: #fff;
+      border-style: groove;
+      padding: 1rem;
+      height: 150px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: larger;
+
+      &:not(:last-child) {
+        margin-bottom: 2rem; // Agrega espacio debajo si no es el último elemento
+      }
+
+      // Clase para que el gráfico de tarta tome el ancho completo en una fila
+      &.full-width {
+        flex-basis: 100%;
+      }
+    }
+  }
+
+  progress {
+    width: 100%;
+    appearance: none; // Remueve la apariencia predeterminada
+    height: 20px; // Altura más grande para la barra de progreso
+    color: #fff; // Color de la barra de progreso
+    background-color: #333333; // Fondo de la barra
+
+    &::-webkit-progress-bar {
+      background-color: #333333;
+    }
+
+    &::-webkit-progress-value {
+      background-color: #fff;
+    }
+
+    &::-moz-progress-bar {
+      background-color: #fff;
+    }
+  }
+
+  progress:hover {
+    background-color: #444444;
+  }
+
+  @media (max-width: 768px) {
+    // En pantallas más pequeñas, cada elemento de la cuadrícula toma el ancho completo
+    .grid-container .grid-item {
+      flex-basis: 100%;
+    }
   }
 }
+
