--- a/src/app/modules/auth/components/login/login.component.scss
+++ b/src/app/modules/auth/components/login/login.component.scss
@@ -59,3 +59,8 @@
 .submit-button:hover {
   background-color: #464c5c;
 }
+.loader-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
