feature: component for sidebar was created

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,20 @@
-<p>sidebar works!</p>
+<aside class="navbar-vertical" [class.active]="isSidebarActive">
+
+  <button (click)="toggleSidebar()" class="toggle-btn">
+    <i>
+      <img src="../../../../../assets/icons/caret-right.svg" alt="">
+    </i>
+  </button>
+
+  <nav>
+    <a href="home" class="nav-item">
+      <img src="../../../../../assets/icons/graph-up.svg" alt="">
+      Dashboard</a>
+    <a href="#" class="nav-item">
+      <img src="../../../../../assets/icons/clock-history.svg" alt="">
+      Historial</a>
+    <a href="new-transaction" class="nav-item">
+      <img src="../../../../../assets/icons/wallet.svg" alt="">
+      Nuevos Registros</a>
+  </nav>
+</aside>
