feature: developing front for new transaction

--- a/src/app/modules/auth/components/register/register.component.scss
+++ b/src/app/modules/auth/components/register/register.component.scss
@@ -44,8 +44,8 @@
   padding: 10px;
   border: none;
   border-radius: 5px;
-  background-color: #575f6f; /* Color de fondo del botón */
-  color: #ffffff; /* Color del texto del botón */
+  background-color: #575f6f;
+  color: #ffffff;
   cursor: pointer;
 
   &.invalid{
