--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -43,45 +43,9 @@
   }
 }
 
-.main-content {
-  padding: 2rem;
-  transition: margin-left 0.3s;
-  margin-left: 250px; // Tamaño del sidebar abierto
-
-  &.active {
-    margin-left: 0; // Tamaño del sidebar cerrado
-  }
-
-  .grid-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    justify-content: center; // Espacio entre los elementos de la cuadrícula
-
-    .grid-item {
-      flex: 1 1 45%;
-      min-width: 300px;
-      border-radius: 8px;
-      border: 2px;
-      border-color: #fff;
-      border-style: groove;
-      padding: 1rem;
-      height: 150px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
-      font-size: larger;
-
-      &:not(:last-child) {
-        margin-bottom: 2rem; // Agrega espacio debajo si no es el último elemento
-      }
-
-      // Clase para que el gráfico de tarta tome el ancho completo en una fila
-      &.full-width {
-        flex-basis: 100%;
-      }
-    }
+@media (max-width: 768px) {
+  // En pantallas más pequeñas, cada elemento de la cuadrícula toma el ancho completo
+  .grid-container .grid-item {
+    flex-basis: 100%;
   }
 }
