feature: ew jineteo transaction worked

--- a/src/app/modules/home/components/new-transaction/new-transaction.component.html
+++ b/src/app/modules/home/components/new-transaction/new-transaction.component.html
@@ -68,6 +68,18 @@
           placeholder="Date of transaction"
           [(ngModel)]="jineteo.date">
 
+          <button
+          class="submit-button"
+          type="submit"
+          [hidden]="isLoading"
+          [disabled] = "jinenteoTransaction.invalid"
+          (submit)="jineteo"
+          [ngClass]="{
+            'invalid':jinenteoTransaction.invalid
+          }"
+          (click)="sendNewTransaction()">
+          Put a Jineteo!</button>
+
         </form>
       </div>
     </div>
