--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,1 +1,14 @@
-<p>modal works!</p>
+<div class="modal" *ngIf="showModal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close-button" (click)="closeModal()">&times;</span>
+    </div>
+    <div class="modal-body">
+      <p>{{ message }}</p>
+      <p>aaaaaaaa</p>
+    </div>
+    <div class="modal-footer">
+      <button (click)="closeModal()">Close</button>
+    </div>
+  </div>
+</div>
