--- a/src/app/modules/home/components/new-transaction/new-transaction.component.scss
+++ b/src/app/modules/home/components/new-transaction/new-transaction.component.scss
@@ -149,6 +149,12 @@
   background-color: #464c5c;
 }
 
+.loader-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 600px) {
   .accordion-container {
     flex-direction: column;
