--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -4,8 +4,10 @@
       <span class="close-button" (click)="closeModal()">&times;</span>
     </div>
     <div class="modal-body">
+      <div class="modal-img">
+        <img [src]="img" alt="">
+      </div>
       <p>{{ message }}</p>
-      <p>aaaaaaaa</p>
     </div>
     <div class="modal-footer">
       <button (click)="closeModal()">Close</button>
