--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -1,21 +1,72 @@
-/* modal.component.scss */
-.modal-backdrop {
+.modal {
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  z-index: 1000;
+  z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  justify-content: center;
-  align-items: center;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+    .modal-header {
+      display: flex;
+      justify-content: flex-end;
+      .close-button {
+        color: #aaa;
+        font-size: 28px;
+        font-weight: bold;
+        &:hover {
+          color: black;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .modal-body {
+      p {
+        margin: 15px 0;
+        text-align: center;
+      }
+
+      .modal-img{
+        display: flex;
+        justify-content: center;
+        height: auto;
+      }
+
+    }
+
+    .modal-footer {
+      display: flex;
+      justify-content: center;
+
+      button {
+        padding: 10px 20px;
+        background-color: #575f6f;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        margin-top: 10px;
+
+        &:hover {
+          background-color: #464c5c;
+        }
+      }
+    }
+  }
 }
-.modal {
-  background: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  width: 300px;
-  text-align: center;
-}
+
 /* ... otros estilos ... */
