--- a/src/app/modules/home/components/new-transaction/new-transaction.component.html
+++ b/src/app/modules/home/components/new-transaction/new-transaction.component.html
@@ -115,6 +115,13 @@
           placeholder="Amount of transaction"
           [(ngModel)]="payment.amount">
 
+          <label for="selectorCreditCard" class="label-input">Credit card you want to pay</label>
+          <div style="margin-top: 3px;"></div>
+
+          <select id="selectorCreditCard" class="selector" [(ngModel)]="payment.creditCardId" name="selectorCreditCard">
+            <option *ngFor="let card of creditCardList" [value]="card.id">{{ card.name }}</option>
+          </select>
+
 
           <label for="observation"
           class="label-input">Observation</label>
@@ -137,6 +144,18 @@
           required="true"
           placeholder="Date of transaction"
           [(ngModel)]="payment.date">
+
+          <button
+          class="submit-button"
+          type="submit"
+          [hidden]="isLoading"
+          [disabled] = "paymentTransaction.invalid"
+          (submit)="payment"
+          [ngClass]="{
+            'invalid':paymentTransaction.invalid
+          }"
+          (click)="sendNewTransaction()">
+          Put a payment!</button>
 
         </form>
       </div>
