feature: sing out was created

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -15,6 +15,11 @@
       Historial</a>
     <a href="new-transaction" class="nav-item">
       <img src="../../../../../assets/icons/wallet.svg" alt="">
-      Nuevos Registros</a>
+      New transaction</a>
   </nav>
+  <a href="auth/login" class="sing-out" (click)="onSignOut()">
+    <img src="../../../../../assets/icons/wallet.svg" alt="">
+    Sing out
+  </a>
 </aside>
+
