feature: communication between login and register

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -62,6 +62,9 @@
     }"
     (click)="onLogin()">
     Go!</button>
+    <a class="register-link"
+    href="auth/register">do you want to register?</a>
+
   </form>
 
 </body>
