--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -94,5 +94,7 @@
     }"
     (click)="onRegister()">
     Go!</button>
+    <a class="login-link"
+    href="auth/login">or login</a>
   </form>
 </body>
