--- a/src/app/modules/auth/components/login/login.component.scss
+++ b/src/app/modules/auth/components/login/login.component.scss
@@ -64,3 +64,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.register-link{
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
