feature: exceptions for atuh servcies with modals

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -69,5 +69,13 @@
 
 </body>
 
+<app-modal
+[message]="message"
+[img]="icon"
+*ngIf="showModal"
+(closeEvent)="showModal = false">
+
+</app-modal>
+
 
 
