--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -98,3 +98,12 @@
     href="auth/login">or login</a>
   </form>
 </body>
+
+
+<app-modal
+[message]="message"
+[img]="icon"
+*ngIf="showModal"
+(closeEvent)="showModal = false">
+
+</app-modal>
