feture: crating new credit card service

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -16,6 +16,9 @@
     <a href="new-transaction" class="nav-item">
       <img src="../../../../../assets/icons/wallet.svg" alt="">
       New transaction</a>
+      <a href="new-credit-card" class="nav-item">
+        <img src="../../../../../assets/icons/credit-card.svg" alt="">
+        New credit card</a>
   </nav>
   <a href="auth/login" class="sing-out" (click)="onSignOut()">
     <img src="../../../../../assets/icons/wallet.svg" alt="">
