feature: addingtransactions to local storage when dashboard is opened. fixing types of transaction seclector for new transaction

--- a/src/app/modules/home/components/new-transaction/new-transaction.component.html
+++ b/src/app/modules/home/components/new-transaction/new-transaction.component.html
@@ -88,7 +88,7 @@
           [ngClass]="{
             'invalid':jinenteoTransaction.invalid
           }"
-          (click)="sendNewTransaction()">
+          (click)="sendNewTransaction(jineteo)">
           Put a Jineteo!</button>
 
 
@@ -154,7 +154,7 @@
           [ngClass]="{
             'invalid':paymentTransaction.invalid
           }"
-          (click)="sendNewTransaction()">
+          (click)="sendNewTransaction(payment)">
           Put a payment!</button>
 
         </form>
