feature: bar progress structured. now it is set according to data from db. but it is just for the first credit card

--- a/src/app/modules/home/components/new-transaction/new-transaction.component.html
+++ b/src/app/modules/home/components/new-transaction/new-transaction.component.html
@@ -37,7 +37,7 @@
           name="misses"
           required="true"
           placeholder="Amont of misses"
-          [(ngModel)]="jineteo.misses">
+          [(ngModel)]="jineteo.losses">
 
           <label for="selectorCreditCard" class="label-input">Credit card you want to jinetear</label>
           <div style="margin-top: 3px;"></div>
