--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -4,15 +4,19 @@
 
 <div class="main-content" [class.active]="!isSidebarActive">
   <div class="grid-container">
+
     <div class="grid-item">
-      <label for="progressBar">Progress with Jineteada</label>
-      <progress id="progressBar" value="70" max="100"></progress>
+      <label for="progressBar">Progress with {{creditCard.name}}</label>
+      <progress id="progressBar" [value]="progressBarValue" max="100"></progress>
       <span>{{ progressBarValue }}%</span>
     </div>
+
     <div class="grid-item">Puntos Colombia generated:
       <h1>350000</h1>
     </div>
+
     <div class="grid-item">Contenido 3</div>
+
     <div class="grid-item">
       <canvas baseChart [data]="pieChartData" [type]="pieChartType">
       </canvas>
