fix: rounded number of bar progress

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -25,9 +25,8 @@
       </div>
     </div>
 
-    <div class="grid-item">
-      <canvas baseChart [data]="pieChartData" [type]="pieChartType">
-      </canvas>
+    <div class="grid-item"> Losses with jineteos:
+      <h1>{{totalLosses | number: '1.0-0' }}</h1>
     </div>
     <div class="grid-item full-width">
     </div>
