feature: working on new ui

--- a/src/app/shared/main-content/main-content.component.scss
+++ b/src/app/shared/main-content/main-content.component.scss
@@ -1,72 +1,4 @@
-@import '/src/styles/variables.scss';
-
-.navbar-vertical {
-  position: fixed;
-  left: 0;
-  width: 250px; // Ancho del sidebar
-  height: 100%;
-  background: #0e1018;
-  margin-top: -12px;
-  padding-top: 12px;
-  padding-left: 10px;
-  transition: transform 0.3s;
-  transform: translateX(-100%); // Inicia fuera de la pantalla
-  z-index: 1000; // Asegúrate de que esté sobre otros elementos
-
-  &.active {
-    transform: translateX(0); // Mueve el sidebar a la vista
-  }
-
-  .toggle-btn {
-    position: absolute;
-    right: -30px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    background-color: transparent;
-    border: 0;
-
-    &:focus {
-      outline: none;
-    }
-
-  }
-
-  .nav-item {
-    display: block;
-    padding: 10px;
-    color: white;
-    text-decoration: none;
-    font-size: larger;
-
-    &:hover {
-      background: darken(#333, 10%);
-    }
-  }
-}
-
-.calendar {
-  max-width: 100%; /* Asegura que el calendario no exceda el ancho del grid-item */
-  display: grid;
-  margin-left: 3%;
-  grid-template-columns: repeat(7, 1fr);
-}
-
-.day {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 0.5px;
-  border-color: #fff;
-  border-style: groove;
-}
-
-.transaction-day {
-  background-color: #ffcc00; /* Color de fondo para los días de transacción */
-  color: #ffffff; /* Color del texto para los días de transacción */
-  font-weight: bold;
-}
-
+@import '../../../styles/variables.scss';
 
 .main-content {
   padding: 2rem;
@@ -139,4 +71,3 @@
     }
   }
 }
-
