--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .navbar-vertical {
   justify-content: space-between;
   flex-direction: column;
@@ -6,7 +8,7 @@
   left: 0;
   width: 250px; // Ancho del sidebar
   height: 100%;
-  background: #0e1018;
+  background: map-get($colors, primary-dark);
   margin-top: -12px;
   padding-top: 12px;
   transition: transform 0.3s;
