--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -78,64 +78,16 @@
   }
 
   .grid-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); // Configura 2 elementos por fila
     gap: 2rem;
     justify-content: center; // Espacio entre los elementos de la cuadrícula
-
-    .grid-item {
-      flex: 1 1 45%;
-      min-width: 300px;
-      border-radius: 8px;
-      padding: 1rem;
-      height: 150px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: map-get($colors, text-primary);
-      font-size: larger;
-      background: map-get($map: $colors, $key: tertiary);
-
-      &:not(:last-child) {
-        margin-bottom: 2rem; // Agrega espacio debajo si no es el último elemento
-      }
-
-      // Clase para que el gráfico de tarta tome el ancho completo en una fila
-      &.full-width {
-        flex-basis: 100%;
-      }
-    }
-  }
-
-  progress {
-    width: 100%;
-    appearance: none; // Remueve la apariencia predeterminada
-    height: 20px; // Altura más grande para la barra de progreso
-    color: #fff; // Color de la barra de progreso
-    background-color: #333333; // Fondo de la barra
-
-    &::-webkit-progress-bar {
-      background-color: #333333;
-    }
-
-    &::-webkit-progress-value {
-      background-color: #fff;
-    }
-
-    &::-moz-progress-bar {
-      background-color: #fff;
-    }
-  }
-
-  progress:hover {
-    background-color: #444444;
   }
 
   @media (max-width: 768px) {
     // En pantallas más pequeñas, cada elemento de la cuadrícula toma el ancho completo
-    .grid-container .grid-item {
-      flex-basis: 100%;
+    .grid-container {
+      grid-template-columns: 1fr; // Configura 1 elemento por fila en pantallas pequeñas
     }
   }
 }
